--- a/index.html
+++ b/index.html
@@ -1,12 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Find Defibrillator</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <meta name="description" content="Find Defibrillator">
+        <meta name="keywords" content="defibrillator, AED, help me, heart">
+        <meta name="author" content="Sandra">
+        <title>Find Defibrillator</title>
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous"/>
+<!--        
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+-->        
+        <link href="assets/css/style.css" rel="stylesheet" type="text/css">
+    </head>
+    <body>
+        <div class="frame">
+<!--Navigation-->
+        <nav class="main-nav">
+            <ul>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Search</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+<!--Top Container-->
+        <section class="top-container">
+            <header class="showbox">
+                <h1>Find <i class="fas fa-heartbeat fa-4x"></i>Defibrillator</h1>
+            </header>
+            <div class="top-box box-up">
+                <h4>AED</h4>
+                <p class="info">Lorem ipsum dolor sit amet consectetur.</p>
+                <a href="#" class="btn">Read More</a>
+            </div>
+            <div class="top-box box-down">
+                <h4>Courses</h4>
+                <p class="info">Lorem ipsum dolor sit amet consectetur.</p>
+                <a href="#" class="btn">Find More</a>
+            </div>
+        </section>
+<!--Map and Search section-->
+        <section class="map">
+            <div>
+                <h2>Search for defibrillator</h2>
+                <input>
+            </div>
+        </section>
+<!--Contact Form-->
+        <section class="contact-form">
+
+        </section>
+<!--Footer-->
+        <footer>
+            <i class="fab fa-linkedin"></i>
+            <i class="fab fa-github"></i>
+            <i class="fas fa-shopping-cart"></i>
+        </footer>
+        </div>
+<!--Frame ends-->        
+    </body>
 </html>
