changed size of heartbeats icon

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <!--Top Container-->
         <section class="top-container">
             <header class="showbox">
-                <h1>Find <i class="fas fa-heartbeat fa-4x"></i>Defibrillator</h1>
+                <h1>Find <i class="fas fa-heartbeat fa-2x"></i>Defibrillator</h1>
             </header>
             <div class="top-box box-up">
                 <h4>AED</h4>
@@ -41,7 +41,7 @@
             </div>
         </section>
 <!--Map and Search section-->
-        <section class="map">
+        <section class="search">
             <div>
                 <h2>Search for defibrillator</h2>
                 <input>
