--- a/index.html
+++ b/index.html
@@ -13,7 +13,17 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 -->        
         <link href="assets/css/style.css" rel="stylesheet" type="text/css">
+
+        <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js">
+    </script>
+    <script type="text/javascript">
+        (function(){
+            emailjs.init("user_SIZaQItQAmYJ7ivu66G6J");
+        })();
+    </script>
     </head>
+
     <body>
         <div class="frame">
 <!--Navigation-->
@@ -45,33 +55,20 @@
             <div>
                 <h2>Search for defibrillator</h2>
                 <input>
+                <i class="fas fa-search"></i>
             </div>
+            <div id="map"></div>
         </section>
 <!--Contact Form-->
         <section class="contact-form">
-<!--
-            <section class="container-fluid">
-                <div class="row bg-color-contact">
-                    <div class="col">
-                        <h3 class="contact-heading uppercase text-center">Got a project in mind?</h3>
-                        <h5 class="uppercase text-center">Let's work together!</h5>
-        
-                        <div class="center-form">
-                            <form onsubmit="return sendMail(this);">
-                                <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required>
-                                <input type="email" name="email" id="emailaddress" class="form-control" placeholder="Email" required>
-                                <textarea rows="5" name="projectsummary" id="projectsummary" class="form-control" placeholder="Project description" required></textarea>
-                                <div class="form-row text-center">
-                                    <div class="col">
-                                        <button type="submit" class="btn btn-secondary">Send Project Request</button>
-                                    </div>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </section>
- -->
+            <div>
+                <form onsubmit="return sendMail(this);">
+                    <input type="text" name="name" id="fullname" placeholder="Name" required><br>
+                    <input type="email" name="email" id="emailaddress" placeholder="Email" required><br>
+                    <textarea rows="5" name="newmessage" id="newmessage" placeholder="Message description" required></textarea><br>
+                    <button type="submit" class="btn">Send Message</button>
+                </form>
+            </div>            
         </section>
 <!--Footer-->
         <footer>
@@ -80,6 +77,11 @@
             <i class="fas fa-shopping-cart"></i>
         </footer>
         </div>
-<!--Frame ends-->        
+<!--Frame ends-->
+    
+    <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB2QSXefEdsrTYgOchwSW3VHcr-uJ5p2sc&callback=initMap"></script>
+    <script src="assets/js/maps.js"></script>
+    <script src="assets/js/sendEmail.js"></script>
     </body>
 </html>
