amended text in top containers section

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </header>
             <div class="top-box box-up">
                 <h4>AED</h4>
-                <p class="info">A defibrillator is a device that gives a high energy electric shock to the heart of someone who is in cardiac arrest.</p>
+                <p class="info"><strong>An Automated External Defibrillator (AED)</strong> is a device that gives a high energy electric shock to the heart of someone who is in cardiac arrest.</p>
                 <a href="#" class="btn">Read More</a>
             </div>
             <div class="top-box box-down">
