added class to div on Contact Form section

--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
         </section>
 <!--Contact Form-->
         <section class="contact-form">
-            <div>
+            <div class="form-box">
                 <form onsubmit="return sendMail(this);">
-                    <input type="text" name="name" id="fullname" placeholder="Name" required><br>
-                    <input type="email" name="email" id="emailaddress" placeholder="Email" required><br>
-                    <textarea rows="5" name="newmessage" id="newmessage" placeholder="Message description" required></textarea><br>
+                    <input type="text" name="name" id="fullname" placeholder="Name" required>
+                    <input type="email" name="email" id="emailaddress" placeholder="Email" required>
+                    <textarea rows="5" name="newmessage" id="newmessage" placeholder="Message description" required></textarea>
                     <button type="submit" class="btn">Send Message</button>
                 </form>
             </div>            
