--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
         <meta name="author" content="Sandra">
         <title>Find Defibrillator</title>
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous"/>
-<!--        
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
--->        
+        
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">        
+        
         <link href="assets/css/style.css" rel="stylesheet" type="text/css">
 
         <script type="text/javascript"
@@ -63,10 +63,14 @@
         <section class="contact-form">
             <div class="form-box">
                 <form onsubmit="return sendMail(this);">
-                    <input type="text" name="name" id="fullname" placeholder="Name" required>
-                    <input type="email" name="email" id="emailaddress" placeholder="Email" required>
-                    <textarea rows="5" name="newmessage" id="newmessage" placeholder="Message description" required></textarea>
-                    <button type="submit" class="btn">Send Message</button>
+                    <input type="text" name="name" id="fullname" placeholder="Name" class="form-control" required>
+                    <input type="email" name="email" id="emailaddress" placeholder="Email" class="form-control" required>
+                    <textarea rows="5" name="newmessage" id="newmessage" placeholder="Message description" class="form-control" required></textarea>
+                    <div class="form-row text-center">
+                        <div class="col">
+                            <button type="submit" class="btn">Send Message</button>
+                        </div>
+                    </div>
                 </form>
             </div>            
         </section>
