changed image path

--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
     <h1>Hmm.. Looks like you've gone off the beaten path. </h1>
     <h3>Don't worry. Click on the image to head back to home.</h3>
     <a href="index.html">
-        <img src="assets/images/man_aed.jpg" alt="AED">
+        <img src="assets/images/aed1.jpg" alt="AED">
     </a>
 </body>
 </html>
