--- a/index.html
+++ b/index.html
@@ -74,13 +74,35 @@
 
             <div class="top-box box-up">
                 <h4>AED</h4>
-                <p class="info"><strong>An Automated External Defibrillator (AED)</strong> is a device that gives a high energy electric shock to the heart of someone who is in cardiac arrest.</p>
-                <a href="#" class="btn">Read More</a>
+                <p class="info"><strong>An Automated External Defibrillator (AED)</strong> is used to help those experiencing sudden cardiac arrest. It's a sophisticated, yet easy-to-use, medical device that can analyze the heart's rhythm and, if necessary, deliver an electrical shock, or defibrillation, to help the heart re-establish an effective rhythm.</p>
+                <a href="https://www.emssafetyservices.com/how-to/aed-101/" target="_blank" class="btn">Read More</a>
             </div>
             <div class="top-box box-down">
-                <h4>Courses</h4>
-                <p class="info">Lorem ipsum dolor sit amet consectetur.</p>
-                <a href="#" class="btn">Find More</a>
+                <h4>AED Training</h4>
+                <p class="info">Do you want to learn how and when to use an automated external defibrillator (AED)? You can save someones life. Click the button and find more about available courses.</p>
+                <button id="modalBtn" class="btn">Find More</button>
+                <div id="simpleModal" class="modal">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h2>Check these amazing courses:</h2>
+                            <span class="closeBtn">&times;</span>
+                        </div>
+                        <div class="modal-body">
+                            <p><img src="https://img.icons8.com/color/30/000000/aed.png"/><strong> Pro Training -</strong><a href="https://www.protrainingcourses.com/heartsaver-aed-course/" target="_blank"> Heart-saver (AED) Emergency First Aid Course</a></p>
+                            <p><img src="https://img.icons8.com/color/30/000000/aed.png"/><strong> CHRIS MEE GROUP -</strong><a href="https://www.cmse.ie/health-and-safety-training/health-and-safety-courses/first-aid-courses/defibrillator-training-course/" target="_blank"> Defibrillator Training Course (AED)</a></p>
+                            <p><img src="https://img.icons8.com/color/30/000000/aed.png"/><strong> Irish Heart Foundation -</strong><a href="https://irishheart.ie/heartsaver-aed-course/" target="_blank"> Heartsaver CPR AED Course</a></p>
+                            <p><img src="https://img.icons8.com/color/30/000000/aed.png"/><strong> MEDICORE Medical Services -</strong><a href="https://www.medicore.ie/first-aid-courses/heartsaver-aed-and-cpr.html" target="_blank"> HeartSaver AED and CPR</a></p>
+                            <p><img src="https://img.icons8.com/color/30/000000/aed.png"/><strong> PHOENIX STS -</strong><a href="https://phoenixsts.ie/online-courses/aed-online-course/" target="_blank"> Heartsaver AED</a></p>
+                            <p><img src="https://img.icons8.com/color/30/000000/aed.png"/><strong> Training Matters -</strong><a href="https://www.booktraining.ie/project/defibrillator-training/" target="_blank"> Defibrillator training</a></p>
+                            <p><img src="https://img.icons8.com/color/30/000000/aed.png"/><strong> Spectrum Health -</strong><a href="https://www.spectrumhealth.ie/first-aid" target="_blank"> First Aid - CPR & AED Training</a></p>
+                            <p><img src="https://img.icons8.com/color/30/000000/aed.png"/><strong> Donegal Safety Services Ltd -</strong><a href="https://donegalsafetyservices.ie/course/cardiac-first-response-course/" target="_blank"> PHECC Cardiac First Response (Community)</a></p>
+                            <p><img src="https://img.icons8.com/color/30/000000/aed.png"/><strong> PB Safety Training -</strong><a href="https://pbsafetytraining.com/cpr-aed-training-course/" target="_blank"> CPR/AED Training Course</a></p>
+                            <p><img src="https://img.icons8.com/color/30/000000/aed.png"/><strong> Safety Ireland -</strong><a href="http://www.safetyireland.com/defibrillator.htm" target="_blank"> Heartsaver AED</a></p>
+                            <p><img src="https://img.icons8.com/color/30/000000/aed.png"/><strong> Kearney Training & Consultancy Ltd -</strong><a href="https://www.ktcsafety.ie/training-courses/heartsaver-aed-a-cpr-course-basic-first-aid/" target="_blank"> Heartsaver AED and CPR Training Course</a></p>
+                            <p><img src="https://img.icons8.com/color/30/000000/aed.png"/><strong> SAMSON Training -</strong><a href="http://samsontraining.ie/first-aid/aed-defibrillator-training-ihf/" target="_blank"> AED Defibrillator Training IHF</a></p>
+                        </div>
+                    </div>
+                </div>
             </div> 
         </section>
 
@@ -117,10 +139,9 @@
         </section>
 <!--Footer-->
         <footer>
-            <i class="fab fa-linkedin"></i>
-            <i class="fab fa-github"></i>
-            <i class="fas fa-shopping-cart"></i>
-            
+            <a href="https://www.linkedin.com/in/sandra-berzkalna-153376205" target="_blank"><i class="fab fa-2x fa-linkedin"></i></a>
+            <a href="#" target="_blank"><i class="fab fa-2x fa-github"></i></a>
+            <a href="https://www.medguard.ie/defibrillators.html" target="_blank"><i class="fas fa-2x fa-shopping-cart"></i></a>
         </footer>
         </div>
 <!--Frame ends-->
@@ -135,6 +156,7 @@
 
     
     <script src="assets/js/maps.js"></script>
+    <script src="assets/js/modal.js"></script>
     <script src="assets/js/sendEmail.js"></script>
     </body>
 </html>
