added another button for map

--- a/index.html
+++ b/index.html
@@ -105,7 +105,6 @@
                 </div>
             </div> 
         </section>
-
 <!--Map section-->
         <section id="search-map" class="map-box">
             <div class="loc-box">
@@ -119,6 +118,7 @@
                 <input type="button" class="btn" onclick="iconMap(LIMERICK)" value="County Limerick">
                 <input type="button" class="btn" onclick="iconMap(WATERFORD)" value="County Waterford">
                 <input type="button" class="btn" onclick="iconMap(CORK)" value="County Cork">
+                <input type="button" class="btn" onclick="iconMap(ROSCOMMON)" value="County Roscommon">
             </div>
             <div id="map"></div>
         </section>
