added title and text for contact form

--- a/index.html
+++ b/index.html
@@ -125,6 +125,8 @@
 <!--Contact Form-->
         <section id="contact" class="contact-form">
             <div class="form-box">
+                <h1><strong>AED Locallity form</strong></h1>
+                <h6>We can help each other! Fill in your name, email and location of where the AED unit is with emergency contact numbers. Also please provide verification code given with your AED Unit. By filling in this form you are potentionaly saving lives for your local community.</h6>
                 <form onsubmit="return sendMail(this);">
                     <input type="text" name="name" id="fullname" placeholder="Name" class="form-control" required>
                     <input type="email" name="email" id="emailaddress" placeholder="Email" class="form-control" required>
