--- a/index.html
+++ b/index.html
@@ -25,16 +25,21 @@
     </head>
 
     <body>
-        <div class="frame">
+        
 <!--Navigation-->
-        <nav class="main-nav">
-            <ul>
-                <li><a href="#about">About</a></li>
-                <li><a href="#search-map">Search</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
+        <nav id="navbar">
+            <h5>Find <a href="https://icons8.com/icon/14741/aed"><img src="https://img.icons8.com/color/48/000000/aed.png"/></a> Defibrillator</h5>
+            <div id="toggle"></div>
+            <div id="menu">
+                <ul>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#search-map">Search</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </div>
         </nav>
 <!--Top Container-->
+        <div id="frame">
         <section id="about" class="top-container">
             <div class="carousel-wrapper">
                 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -47,9 +52,6 @@
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <img class="d-block mx-auto w-100" src="assets/images/aed3.jpg" alt="First slide">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>Find <a href="https://icons8.com/icon/14741/aed"><img src="https://img.icons8.com/color/96/000000/aed.png"/></a> Defibrillator</h5>
-                              </div>
                         </div>
                         <div class="carousel-item">
                             <img class="d-block mx-auto w-100" src="assets/images/aed1.jpg" alt="Second slide">
@@ -153,6 +155,23 @@
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB2QSXefEdsrTYgOchwSW3VHcr-uJ5p2sc&callback=initMap"></script>
     
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script type="text/javascript">
+        const navbar = document.getElementById('navbar');
+        const toggle = document.getElementById('toggle');
+        const menu = document.getElementById('menu');
+
+        document.onclick = function(x){
+            if(x.target.id !== 'navbar' && x.target.id !== 'toggle' && x.target.id !== 'menu'){
+                toggle.classList.remove('active');
+                menu.classList.remove('active');
+            }
+        }
+
+        toggle.onclick = function(){
+            toggle.classList.toggle('active');
+            menu.classList.toggle('active');
+        }
+    </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
