--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 
         <script type="text/javascript"
         src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js">
-    </script>
-    <script type="text/javascript">
-        (function(){
-            emailjs.init("user_SIZaQItQAmYJ7ivu66G6J");
-        })();
-    </script>
+        </script>
+        <script type="text/javascript">
+            (function(){
+                emailjs.init("user_SIZaQItQAmYJ7ivu66G6J");
+            })();
+        </script>
     </head>
 
     <body>
@@ -129,7 +129,7 @@
             <div class="form-box">
                 <h1><strong>AED Locallity form</strong></h1>
                 <h6>We can help each other! Fill in your name, email and location of where the AED unit is with emergency contact numbers. Also please provide verification code given with your AED Unit. By filling in this form you are potentionaly saving lives for your local community.</h6>
-                <form onsubmit="return sendMail(this);">
+                <form onsubmit="return sendMail(this);" name="contactForm">
                     <input type="text" name="name" id="fullname" placeholder="Name" class="form-control" required>
                     <input type="email" name="email" id="emailaddress" placeholder="Email" class="form-control" required>
                     <textarea rows="5" name="newmessage" id="newmessage" placeholder="Message description" class="form-control" required></textarea>
@@ -156,6 +156,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
     <script src="assets/js/main.js"></script>
     <script src="assets/js/maps.js"></script>
