--- a/index.html
+++ b/index.html
@@ -39,41 +39,32 @@
             </div>
         </nav>
 <!--Top Container-->
-        
         <section id="about" class="top-container">
-            <div class="carousel-wrapper">
-                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                    <ol class="carousel-indicators">
-                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-                    </ol>
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img class="d-block mx-auto w-100" src="assets/images/aed3.jpg" alt="First slide">
-                        </div>
-                        <div class="carousel-item">
-                            <img class="d-block mx-auto w-100" src="assets/images/aed1.jpg" alt="Second slide">
-                        </div>
-                        <div class="carousel-item">
-                            <img class="d-block mx-auto w-100" src="assets/images/aed2.jpg" alt="Third slide">
-                        </div>
-                        <div class="carousel-item">
-                            <img class="d-block mx-auto w-100" src="assets/images/aed4.jpg" alt="Fourth slide">
-                        </div>
+            <div id="SimpleCarouselExample" class="carousel slide carousel-wrapper" data-ride="carousel">
+                
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img class="d-block w-100" src="assets/images/aed3.jpg" alt="First slide">
                     </div>
-                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                    </a>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="assets/images/aed1.jpg" alt="Second slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="assets/images/aed2.jpg" alt="Third slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="assets/images/aed4.jpg" alt="Fourth slide">
+                    </div>
                 </div>
+                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+                </a>
             </div>
-
             <div class="top-box box-up">
                 <h4>AED</h4>
                 <p class="info"><strong>An Automated External Defibrillator (AED)</strong> is used to help those experiencing sudden cardiac arrest. It's a sophisticated, yet easy-to-use, medical device that can analyze the heart's rhythm and, if necessary, deliver an electrical shock, or defibrillation, to help the heart re-establish an effective rhythm.</p>
