added title for maps section

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div id="menu">
                 <ul>
                     <li><a href="#about">About</a></li>
-                    <li><a href="#myMap">Search</a></li>
+                    <li><a href="#locations">Locations</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </div>
@@ -66,12 +66,12 @@
                 </a>
             </div>
             <div class="top-box box-up">
-                <h4>AED</h4>
+                <h4><i class="fab fa-searchengin"></i> <strong>AED Defibrillator</strong></h4>
                 <p class="info"><strong>An Automated External Defibrillator (AED)</strong> is used to help those experiencing sudden cardiac arrest.</p>
                 <a href="https://www.emssafetyservices.com/how-to/aed-101/" target="_blank" class="btn">Read More</a>
             </div>
             <div class="top-box box-down">
-                <h4>AED Training</h4>
+                <h4><i class="fas fa-graduation-cap"></i> <strong>AED Training</strong></h4>
                 <p class="info">Do you want to learn how and when to use an automated external defibrillator (AED)? Click on the button and find more about available courses.</p>
                 <button id="modalBtn" class="btn">Find More</button>
                 <div id="simpleModal" class="modal">
@@ -97,6 +97,12 @@
                     </div>
                 </div>
             </div> 
+        </section>
+        <section id="locations">
+            <div class="loc-heading">
+                <h1><strong>Defibrillator location map</strong></h1>
+                <h6>Please click on marker on map to find location of the AED defibrillator unit. The map is set to your current location.</h6>
+            </div>
         </section>
 <!--Map section-->
         <section>
