--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
         <meta name="author" content="Sandra">
         <title>Find Defibrillator</title>
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous"/>
-        
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
               
         <link href="assets/css/style.css" rel="stylesheet" type="text/css">
@@ -128,7 +127,7 @@
 <!--Footer-->
         <footer>
             <a href="https://www.linkedin.com/in/sandra-berzkalna-153376205" target="_blank"><i class="fab fa-2x fa-linkedin"></i></a>
-            <a href="#" target="_blank"><i class="fab fa-2x fa-github"></i></a>
+            <a href="https://github.com/Sandra-Be/find_defibrillator.git" target="_blank"><i class="fab fa-2x fa-github"></i></a>
             <a href="https://www.medguard.ie/defibrillators.html" target="_blank"><i class="fas fa-2x fa-shopping-cart"></i></a>
         </footer>
         </div>
