changed url address for github into footer

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 <!--Footer-->
         <footer>
             <a href="https://www.linkedin.com/in/sandra-berzkalna-153376205" target="_blank"><i class="fab fa-2x fa-linkedin"></i></a>
-            <a href="https://sandra-be.github.io/find_defibrillator/" target="_blank"><i class="fab fa-2x fa-github"></i></a>
+            <a href="https://github.com/Sandra-Be/find_defibrillator" target="_blank"><i class="fab fa-2x fa-github"></i></a>
             <a href="https://www.medguard.ie/defibrillators.html" target="_blank"><i class="fas fa-2x fa-shopping-cart"></i></a>
         </footer>
         </div>
