--- a/index.html
+++ b/index.html
@@ -26,17 +26,29 @@
     <body>
         <div id="frame">
 <!--Navigation-->
-        <nav id="navbar" class="navigation">
-            <h5>Find <a href="https://icons8.com/icon/14741/aed"><img src="https://img.icons8.com/color/48/000000/aed.png" alt="heart"/></a> Defibrillator</h5>
-            <div id="toggle"></div>
-            <div id="menu">
-                <ul>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#locations">Locations</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </div>
-        </nav>
+        <header>
+            <nav class="navbar navbar-expand-lg navbar-light navbar-custom">
+                <h5>Find <a href="https://icons8.com/icon/14741/aed"><img src="https://img.icons8.com/color/48/000000/aed.png" alt="heart"/></a> Defibrillator</h5>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item active">
+                            <a class="navbar-nav nav-link px-4" href="index.html">About<span
+                                    class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="navbar-nav nav-item active">
+                            <a class="nav-link px-4" href="#locations">Locations</a>
+                        </li>
+                        <li class="navbar-nav nav-item active">
+                            <a class="nav-link px-4" href="#contact">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </header>
 <!--Top Container-->
         <section id="about" class="top-container">
             <div id="SimpleCarouselExample" class="carousel slide carousel-wrapper" data-ride="carousel">
